src/test/resources/private/typechecking/pass/member_access/member_02.jova
class Class2 {
    public int test() {
        return 69;
    }
}

class Class1 {
    private int test1(Class2 c){
        return c.test();
    }
}



