src/test/resources/private/typechecking/fail/member_access/member_01.jova
class Class2 {
    public int test2;
}

class Class1 {
    private int test1(Class2 c){
        return c.test;
    }
}



